<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="40dp"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff1e00"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/txt1" />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btnControl"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/btnControl"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btnArray"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/btnArray"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btnArrayControl"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/btnArrayControl"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btnArrayObject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="17sp"
                android:text="@string/btnArrayObject"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btnActivity"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/btnActivity"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btnThoat"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/btnThoat"/>
        </TableRow>
    </TableLayout>
</LinearLayout>